--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -107,3 +107,109 @@
     }
 }
 
+.search {
+    min-height: 725px;
+    background-color: #1136bf;
+}
+
+.search__inner {
+    padding: 185px 0px 100px;
+    color: #fff;
+    text-align: center;
+    &-title {
+        span {
+            display: block;
+        }
+        font-size: 60px;
+        font-weight: 700;
+        line-height: 70px;
+        margin-bottom: 30px;
+    }
+    &-text {
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 70px;
+    }
+    &-links {
+        a {
+            width: 190px;
+            height: 55px;
+            border-radius: 26px;
+            margin: 15px;
+            font-size: 15px;
+            line-height: 25px;
+            padding-top: 15px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            &:hover {
+                background-color: #fff;
+                color: #1136bf;
+            }
+        }
+        
+    }
+    &-form {
+        max-width: 1140px;
+        width: 100%;
+        background-color: #fff;
+        height: 135px;
+        border-radius: 6px;
+        text-align: left;
+        font-size: 16px;
+        padding: 40px;
+        position: relative;
+        bottom: -170px;
+        -webkit-box-shadow: 0px -22px 3px -11px rgba(255,255,255,0.5), 0px -48px 3px -26px rgba(255,255,255,0.5); 
+        box-shadow: 0px -22px 3px -11px rgba(255,255,255,0.5), 0px -48px 3px -26px rgba(255,255,255,0.5);
+        input {
+            max-width: 800px;
+            width: 100%;
+            height: 55px;
+            padding: 0px 222px 0px 30px;
+            border: 1px solid #dcdcdc;
+            border-right: none;
+            outline: none;
+            &::placeholder {
+                color: $grey;
+            }
+        }
+        select {
+            max-width: 192px;
+            width: 100%;
+            height: 55px;
+            -webkit-appearance: none;
+            appearance: none;
+            padding-left: 20px;
+            margin-left: -4px;
+            border: 1px solid #dcdcdc;
+            outline: none;
+            position: absolute;
+            top: 40px;
+            right: 295px;
+            background: none;
+        }
+        button {
+            width: 223px;
+            height: 55px;
+            background-color: $blue;
+            border-radius: 6px;
+            border: none;
+            color: #fff;
+            margin-left: 30px;
+            position: absolute;
+            top: 40px;
+            right: 40px;
+        }
+    }
+}
+.form__select::before {
+    content: "";
+    width: 13px;
+    height: 8px;
+    display: block;
+    background-image: url(../images/icons/arrow-down.png);
+    position: absolute;
+    top: 65px;
+    right: 315px;
+}
