--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,6 +32,12 @@ ul, li {
     list-style: none;
 }
 
+p {
+    color: #555555;
+    font-weight: 500;
+    font-size: 16px;
+    margin: 0;
+}
 .container {
     max-width: 1170px;
     margin: 0 auto;
