--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,8 @@
 @import 'global';
 @import 'fonts';
 
+//Start header
+
 .header__top {
     background-color: #e7ecf2;
 }
@@ -107,6 +109,9 @@
     }
 }
 
+//End header
+//Start search
+
 .search {
     min-height: 725px;
     background-color: #1136bf;
@@ -117,13 +122,13 @@
     color: #fff;
     text-align: center;
     &-title {
-        span {
-            display: block;
-        }
         font-size: 60px;
-        font-weight: 700;
         line-height: 70px;
         margin-bottom: 30px;
+        span {
+            display: block;
+            font-weight: 700;
+        }
     }
     &-text {
         font-size: 20px;
@@ -160,8 +165,8 @@
         padding: 40px;
         position: relative;
         bottom: -170px;
-        -webkit-box-shadow: 0px -22px 3px -11px rgba(255,255,255,0.5), 0px -48px 3px -26px rgba(255,255,255,0.5); 
-        box-shadow: 0px -22px 3px -11px rgba(255,255,255,0.5), 0px -48px 3px -26px rgba(255,255,255,0.5);
+        -webkit-box-shadow: 0px -22px 1px -11px rgba(255,255,255,0.5), 0px -48px 1px -26px rgba(255,255,255,0.5), 0px 1px 2px 0px rgba(90, 93, 100, 0.1); 
+        box-shadow: 0px -22px 1px -11px rgba(255,255,255,0.5), 0px -48px 1px -26px rgba(255,255,255,0.5), 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
         input {
             max-width: 800px;
             width: 100%;
@@ -213,3 +218,241 @@
     top: 65px;
     right: 315px;
 }
+
+//End search
+//Start content
+
+.content {
+    min-height: 710px;
+}
+
+//End content
+//Start slider
+
+.slider {
+    min-height: 850px;
+    background-color: $bg-grey;
+}
+
+//End slider
+//Start products
+.products {
+    padding-top: 120px;
+    min-height: 1730px;
+    background-color: $light-grey;
+}
+.products__top {
+    height: 110px;
+    padding-left: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
+    &-title {
+        font-size: 30px;
+        line-height: 45px;
+        color: black;
+        font-weight: 500;
+    }
+    &-filter {
+        font-size: 16px;
+        color: #747b86;
+        margin-left: auto;
+        margin-right: 25px;
+    }
+    &-btn {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-right: 30px;
+    }
+}
+
+.dot {
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: #a3b1c4;
+    margin: 2px;
+}
+
+.products__inner-btn {
+    height: 90px;
+    margin-top: 30px;
+    padding-left: 30px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #fff;
+    font-size: 15px;
+    line-height: 22px;
+    box-shadow: 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
+    button {
+        padding: 7px 20px;
+        border-radius: 15px;
+        border: none;
+        background-color: #f1f3f6;
+        color: #747b86;
+        outline: none;
+        & + button {
+            margin-left: 10px;
+        }
+        &.mixitup-control-active {
+            background-color: $blue;
+            color: #fff;
+        }
+    }
+}
+
+.products__inner-box {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.product__item {
+max-width: 361px;
+margin-bottom: 30px;
+box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+}
+
+.product__item-img {
+    width: 361px;
+    height: 230px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    &:hover .item__btn {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 1s;
+    }
+    &:hover .item__btn a {
+            display: block;
+        }
+}
+
+.item__btn {
+    height: 0px;
+    & a {
+        display: none;
+        font-size: 15px;
+        line-height: 15px;
+        padding: 14px 30px;
+        border: 1px solid #fff;
+        border-radius: 23px;
+        color: #fff;
+        margin: 5px;
+        &:hover {
+            background-color: #fff;
+            color: $blue;
+            transition: all .5s;
+        }
+    }
+}
+.product__item-content {
+    background-color: #fff;
+}
+
+.item__title {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 700;
+    color: #000;
+    margin-top: 25px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+
+.item__info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 30px;
+    &-avatar {
+        width: 28px;
+        height: 28px;
+        border-radius: 50%;
+        margin-right: 7px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    a {
+        font-size: 15px;
+        font-weight: 500;
+        color: #000;  
+    }
+    &-category-logo {
+        width: 20px;
+        height: 20px;
+        margin-right: 7px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: auto;
+        margin-left: 30px;
+    }
+    &-category {
+        font-size: 15px;
+        font-weight: 500;
+        color: #7347c1;
+    }
+}
+.item__text {
+    padding: 35px 30px;    
+}
+
+.product__item-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    border-top: 1px solid $light-grey;
+    font-size: 15px;
+    color: $blue;
+    font-weight: 700;
+    &-price {
+        background-color: #e6f1fd;
+        width: 60px;
+        height: 30px;
+        border-radius: 15px;
+        text-align: center;
+        margin: 15px 13px 15px 30px;
+    }
+    &-likes,
+    &-cart {
+        margin-right: auto;
+        display: flex;
+        align-items: center;
+        div {
+            margin-left: 5px;
+        }
+    }
+    &-likes {
+       color: #6f7d8d; 
+    }
+    &-cart {
+        margin-right: 30px;
+    }
+}
+.products__inner-botbtn {
+    text-align: center;
+    button {
+        width: 190px;
+        height: 55px;
+        font-size: 16px;
+        margin-top: 55px;
+        margin-bottom: 120px;
+        background-color: #0674ec;
+        color: #fff;
+        border-radius: 27px;
+        border: none;
+        outline: none;
+    }
+}
+//End products
+
