--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -508,6 +508,7 @@
 
 .product__item-content {
     background-color: #fff;
+    max-width: 361px;
 }
 
 .item__title {
@@ -557,6 +558,7 @@
 }
 
 .product__item-details {
+    max-width: 361px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -621,4 +623,37 @@
     }
 }
 //End products
-
+//Start followers
+.followers {
+    min-height: 930px;
+    background-color: $bg-grey;
+    padding-top: 120px;
+    &__top {
+        height: 110px;
+        padding-left: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 4px;
+        background-color: #fff;
+        box-shadow: 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
+        &-title {
+            font-size: 30px;
+            font-weight: 400;
+            color: #000;
+        }
+        &-arrows {
+            width: 100px;
+            height: 45px;
+            border-radius: 22px;
+            background-color: $blue;
+            margin-right: 30px;
+        }
+    }
+    &__inner {
+        padding-top: 50px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+//end followers
