--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -306,6 +306,7 @@
             max-height: 450px;
             background-color: #fff;
             padding: 25px 20px 20px 20px;
+            box-shadow: 0px 2px 30px 0px rgba(147, 155, 168, 0.1);
             .item__text {
                 font-size: 16px;
                 line-height: 30px;
@@ -365,7 +366,7 @@
         }
     }
 }
-
+  
 .slick-next.slick-arrow,
 .slick-arrow.slick-prev {
     background-color: transparent;
@@ -628,6 +629,7 @@
     min-height: 930px;
     background-color: $bg-grey;
     padding-top: 120px;
+    padding-bottom: 120px;
     &__top {
         height: 110px;
         padding-left: 30px;
@@ -654,6 +656,47 @@
         padding-top: 50px;
         display: flex;
         justify-content: space-between;
+        
     }
 }
+
 //end followers
+//start statistics
+.statistics {
+    background-color: #212225;
+    &__inner {
+        min-height: 350px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        color: #feb71d; 
+        .item__icon {
+            span {
+            font-size: 48px;
+            }
+        }
+        .item__number {
+            font-size: 36px;
+        }
+        .item__desc {
+            font-size: 18px;
+            color: #fff;
+        }
+    }
+    .sales {
+        color: #58c9e9;
+    }
+    .customers {
+        color: #77de51;
+    }
+    .members {
+        color: #ff6a6d;
+    }
+}
+//end statistics
