--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -778,5 +778,47 @@
         line-height: 30px;
     }
 }
-
 //end advantages
+//start join
+.join {
+    min-height: 560px;
+    &__inner {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    &__item {
+        width: 50%;
+        min-height: 560px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        text-align: center;
+        color: #fff;
+    }
+    &__icon {
+        margin-top: 100px;
+    }
+    &__title {
+        margin-top: 50px;
+        font-size: 36px;
+        font-weight: 400;
+    }
+    &__text {
+        max-width: 590px;
+        margin: 0 auto;
+        padding-top: 25px;
+        font-size: 16px;
+        font-weight: 400;
+    }
+    &__btn {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 25px;
+        padding: 15px 40px;
+        background-color: #fff;
+        border-radius: 27px;
+        margin: 48px 0;
+    }
+}
+//end join
