--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -875,8 +875,8 @@
         padding-top: 25px;
     }
 }
-
 //end feedback
+//start news
 .news {
     min-height: 885px;
     padding: 120px 0px;
@@ -887,6 +887,7 @@
     }
     &__content {
         max-height: 186px;
+        overflow: hidden;
     }
     &__title {
         font-size: 22px;
@@ -899,7 +900,6 @@
         font-weight: 400;
         line-height: 30px;
         padding: 20px 30px 25px;
-        overflow: hidden;
     }
     &__details {
         color: #7e7e7e;
@@ -921,4 +921,251 @@
         margin-right: 30px;
     }
 }
-//end feedback
+//end news
+//start advantages2
+.advantages2 {
+    min-height: 300px;
+    &__inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__item {
+        min-height: 300px;
+        width: 50%;
+        text-align: center;
+        font-size: 24px;
+        font-weight: 400;
+        a {
+            color: $blue;
+        }
+        a.purple {
+            color: #7f4ec2;
+        }
+    }
+    &__img {
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 120px;
+        width: 155px;
+        margin: 0 auto;
+        margin-top: 65px;
+        margin-bottom: 30px;
+    }
+    &__item + &__item {
+        border-left: 1px solid $bg-grey;
+    }
+}
+//end advantages2
+//start join2
+.join2 {
+    min-height: 400px;
+    background: linear-gradient(90deg, rgba(103,30,144,1) 0%, rgba(21,53,211,1) 100%);
+    &__inner {
+        text-align: center;
+    }
+    &__title {
+        font-size: 36px;
+        font-weight: 400;
+        color: #fff;
+        padding-top: 110px;
+    }
+    &__text {
+        font-size: 18px;
+        font-weight: 400;
+        color: #e7e7e7;
+        padding-top: 20px;
+    }
+    &__btn {
+        color: $blue;
+        background-color: #fff;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 16px;
+        padding: 20px 45px;
+        border-radius: 27px;
+        margin-top: 45px;
+    }
+}
+//end join2
+//start footer
+.footer {
+    background-color: #262b30;
+    color: #ababab;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding: 115px 0px;
+        a,
+        ul {
+            color: #ababab;
+        }
+        span {
+            color: #fff;
+            font-size: 16px;
+            margin-right: 10px;
+        }
+    }
+    &__col {
+        max-width: 265px;
+        &.col__menu {
+            max-width: 140px;
+        }
+        &.col__news {
+            max-width: 360px;
+        }
+    }
+    &__logo {
+        margin-bottom: 16px;
+    }
+    &__text {
+        font-size: 15px;
+        line-height: 28px;
+        font-weight: 400;
+        margin-bottom: 20px;
+    }
+    &__info {
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 25px;
+        margin-bottom: 15px;
+    }
+    &__address {
+        display: flex;
+        align-items: center;
+    }
+    &__title {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+        margin-bottom: 25px;
+        color: #fff;
+        margin-top: 10px;
+    }
+    &__list {
+        li {
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 32px;
+        }
+    }
+    &__form {
+        max-width: 360px;
+        width: 100%;
+        position: relative;
+        input {
+            display: block;
+            width: 100%;
+            height: 50px;
+            border-radius: 25px;
+            border: 1px solid #d9dfe5;
+            font-size: 15px;
+            outline: none;
+            padding-left: 25px;
+            padding-right: 85px;
+            &::placeholder {
+                color: $grey;
+            }
+        }
+        button {
+            padding: 0px 30px;
+            height: 50px;
+            border-radius: 25px;
+            position: absolute;
+            border: none;
+            background-color: $blue;
+            right: 0;
+            top: 0;
+            color: #fff;
+        }
+    }
+    &__social {
+        margin-top: 45px;
+        li {
+            display: inline-block;
+            font-family: 'icomoon';
+            position: relative;
+            a {
+                width: 42px;
+                height: 42px;
+                border-radius: 50%;
+                color: #fff;
+            }
+            .facebook {
+                background-color: #395799;
+            }
+            .facebook::before {
+                content: "\f09a";
+                font-size: 16px;
+                position: absolute;
+                top: 7px;
+                left: 16px;
+            }
+            .twitter {
+                background-color: #19b2f5;
+            }
+            .twitter::before {
+                content: "\f099";
+                font-size: 16px;
+                position: absolute;
+                top: 7px;
+                left: 14px;
+            }
+            .google {
+                background-color: #f05b44;
+            }
+            .google::before {
+                content: "\f1a0";
+                font-size: 16px;
+                position: absolute;
+                top: 7px;
+                left: 14px;
+            }
+            .pinterest {
+                background-color: #9c0c1c;
+            }
+            .pinterest::before {
+                content: "\f0d2";
+                font-size: 16px;
+                position: absolute;
+                top: 7px;
+                left: 14px;
+            }
+            .linkedin {
+                background-color: #0da6be;
+            }
+            .linkedin::before {
+                content: "\f0e1";
+                font-size: 16px;
+                position: absolute;
+                top: 7px;
+                left: 15px;
+            }
+            .ball {
+                background-color: #ea4c89;
+            }
+            .ball::before {
+                content: "\f17d";
+                font-size: 16px;
+                position: absolute;
+                top: 7px;
+                left: 14px;
+            }
+            & + li {
+                margin-left: 10px;
+            }
+        }
+    }
+    &__copy {
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 28px;
+        text-align: center;
+        background-color: #192027;
+        padding: 35px;
+        a {
+            color: #fff;
+        }
+    }
+}
+//end footer
