--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -161,8 +161,28 @@
             padding: 40px;
             position: relative;
             bottom: -170px;
-            -webkit-box-shadow: 0px -22px 1px -11px rgba(255,255,255,0.5), 0px -48px 1px -26px rgba(255,255,255,0.5), 0px 1px 2px 0px rgba(90, 93, 100, 0.1); 
-            box-shadow: 0px -22px 1px -11px rgba(255,255,255,0.5), 0px -48px 1px -26px rgba(255,255,255,0.5), 0px 1px 2px 0px rgba(90, 93, 100, 0.1);
+            .shadow1 {
+                max-width: 1110px;
+                width: 100%;
+                height: 20px;
+                border-radius: 6px;
+                opacity: 0.5;
+                position: absolute;
+                background-color: #fff;
+                top: -13px;
+                left: 15px;
+            }
+            .shadow2 {
+                max-width: 1080px;
+                width: 100%;
+                height: 40px;
+                border-radius: 6px;
+                opacity: 0.5;
+                position: absolute;
+                background-color: #fff;
+                top: -26px;
+                left: 30px;
+            }
             input {
                 max-width: 800px;
                 width: 100%;
@@ -886,10 +906,17 @@
         justify-content: space-between;
     }
     &__content {
+        max-width: 361px;
         max-height: 186px;
-        overflow: hidden;
+        background-color: #fff;
+        padding-bottom: 25px;
+        &--overflow {
+            max-height: 160px;
+            overflow: hidden;
+        }
     }
     &__title {
+        min-height: 53px;
         font-size: 22px;
         font-weight: 500;
         line-height: 28px;
@@ -899,7 +926,8 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 30px;
-        padding: 20px 30px 25px;
+        padding: 20px 30px 0px;
+        margin-bottom: 25px;
     }
     &__details {
         color: #7e7e7e;
@@ -1062,7 +1090,7 @@
             font-size: 15px;
             outline: none;
             padding-left: 25px;
-            padding-right: 85px;
+            padding-right: 115px;
             &::placeholder {
                 color: $grey;
             }
