added page new-products

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,6 +8,11 @@ html {
     box-sizing: inherit;
 }
 
+html,
+body {
+	height: 100%;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
     font-weight: 400;
@@ -57,3 +62,45 @@ p {
     }
 }
 
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.page-content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
+}
+.breadcrumbs {
+    &__inner {
+        padding: 20px;
+        text-align: center;
+        margin-top: -68px;
+    }
+    &__list {
+        li {
+            display: inline-block;
+            position: relative;
+            & + li {
+                padding-left: 25px;
+                &::before {
+                    content: "/";
+                    color: #fff;
+                    position: absolute;
+                    left: 10px;
+                }
+            }
+            &:last-child {
+                a,
+                span {
+                    color: #bfcad7;
+                }
+            }
+        }
+        a {
+            color: #fff;
+        }
+    }
+} 
