--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,13 +15,13 @@
     }
     &__btn {
         background-color: $blue;
-        padding: 4px 18px;
-        border-radius: 20px;
         margin-left: auto;
         margin-right: 50px;
+        border-radius: 20px;
         box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
         a {
             color: #fff;
+            padding: 4px 18px;
         }
     }
     &__user {
@@ -109,7 +109,7 @@
 
 .search {
     min-height: 725px;
-    background-color: #1136bf;
+    background: linear-gradient(90deg, rgba(45,81,209,1) 0%, rgba(11,49,188,1) 100%);
     &__inner {
         padding: 185px 0px 100px;
         color: #fff;
@@ -236,7 +236,51 @@
         }
     }
 }
-
+.page-search {
+    min-height: 280px;
+    background: linear-gradient(90deg, rgba(76,31,156,1) 0%, rgba(53,42,188,1) 50%, rgba(13,62,242,1) 100%);
+    &__inner {
+        text-align: center;
+        color: #f3f3f8;
+    }
+    &__title {
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 46px;
+        padding: 80px 0px 20px;
+    }
+    &__form {
+        max-width: 555px;
+        width: 100%;
+        position: relative;
+        margin: 0 auto;
+        input {
+            display: block;
+            width: 100%;
+            height: 55px;
+            border-radius: 27px;
+            border: 1px solid #d9dfe5;
+            font-size: 15px;
+            outline: none;
+            padding-left: 25px;
+            padding-right: 120px;
+            &::placeholder {
+                color: $grey;
+            }
+        }
+        button {
+            color: #fff;
+            width: 110px;
+            height: 55px;
+            border-radius: 27px;
+            position: absolute;
+            border: none;
+            background-color: $blue;
+            right: -1px;
+            top: 0;
+        }
+    }
+}
 //End search
 //Start content
 
@@ -314,6 +358,8 @@
     }
     &__item {
         display: flex !important;
+        border-radius: 4px;
+        overflow: hidden;
         &-img {
             width: 555px;
             height: 450px;
@@ -474,6 +520,8 @@
         justify-content: space-between;
         flex-wrap: wrap;
         .product__item {
+            border-radius: 4px;
+            overflow: hidden;
             max-width: 361px;
             margin-bottom: 30px;
             box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
@@ -588,6 +636,7 @@
     font-size: 15px;
     color: $blue;
     font-weight: 700;
+
     &-price {
         background-color: #e6f1fd;
         min-width: 60px;
@@ -599,13 +648,13 @@
     }
     &-likes,
     &-cart {
-        margin-right: auto;
-        display: flex;
-        align-items: center;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
     
-        div {
-            margin-left: 5px;
-        }
+    div {
+    margin-left: 5px;
+    }
     }
     &-likes {
        color: #6f7d8d;
@@ -641,6 +690,7 @@
         border-radius: 27px;
         border: none;
         outline: none;
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
     }
 }
 //End products
@@ -1102,7 +1152,7 @@
             position: absolute;
             border: none;
             background-color: $blue;
-            right: 0;
+            right: -1px;
             top: 0;
             color: #fff;
         }
@@ -1197,3 +1247,226 @@
     }
 }
 //end footer
+//start page-grid
+.page-grid {
+    background-color: $bg-grey;
+    &__topbar {
+        background-color: #fff;
+
+    }
+    .topbar {
+        min-height: 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        &__btn {
+            border: none;
+            background-color: transparent;
+            outline: none;
+            font-size: 16px;
+            font-weight: 400;
+            color: #555555;
+            padding: 0px 20px 0px 0px;
+            &--active {
+            color: $blue;    
+            }
+        }
+        &__filter-form {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__sort {
+            height: 40px;
+            padding-left: 15px;
+            padding-right: 85px;
+            color: #747b86;
+            margin-right: 30px;
+            border: 1px solid #eff1f5;
+            outline: none;
+        }
+        &__view {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #eff1f5;
+            border-radius: 2px;
+            padding: 10px 20px;
+        }
+        &__view-btn {
+            background-color: transparent;
+            border: none;
+            outline: none;
+            font-size: 20px;
+            line-height: 20px;
+            padding: 0;
+            color: #747b86;
+            &--active {
+                color: $blue;    
+                }
+            & + .topbar__view-btn {
+                margin-left: 15px;
+            }
+        }
+    }
+    &__inner {
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 80px;
+    }
+    &__aside {
+        min-width: 265px;
+    }
+    &__aside-filter {
+        background-color: #fff;
+        padding: 30px;
+        margin-bottom: 30px;
+        border-radius: 4px;
+    }
+    &__aside-title {
+        color: #010101;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 30px;
+        position: relative;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #e7ebee;;
+    }
+    &__aside-arrow {
+        margin-right: 0;
+        position: absolute;
+        right: 0;
+        top: 5px;
+        color: #555555;
+    }
+    &__aside-list {
+        padding-top: 25px;
+    }
+    &__list-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .lnr-chevron-right:before {
+            margin-right: 10px;
+        }
+    }
+    &__list-link {
+        margin-left: 0;
+        margin-right: auto;
+        color: #555555;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 36px;
+        &--active {
+            color: $blue;    
+            }
+    }
+    &__form-list {
+        padding-top: 25px;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 36px;
+    }
+    &__form-item {
+        margin-right: 10px;
+    }
+    &__price-range {
+        text-align: center;
+        padding-bottom: 10px;
+        .irs--round .irs-bar {
+            background-color: $purple;
+        }
+        .irs--round .irs-handle {
+            top: 28px;
+            height: 20px;
+            width: 20px;
+        }
+        .irs-to,
+        .irs-from {
+            top: 68px;
+            color: $purple;
+            background-color: rgba(115,71,193,0.1);
+            padding: 10px 25px;
+            border-radius: 17px;
+            &::before {
+                display: none;
+            }
+        }
+    }
+    &__price-btn {
+        margin-top: 80px;
+        color: #fff;
+        background-color: $blue;
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 25px;
+        padding: 10px 30px;
+        border-radius: 22px;
+        border: none;
+        box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.1);
+    }
+    &__product-content {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    &__product-item {
+        border-radius: 4px;
+        overflow: hidden;
+        max-width: 260px;
+        max-height: 370px;
+        margin-left: 30px;
+        margin-bottom: 30px;
+        box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+    }
+    &__item-img {
+        width: 260px;
+        height: 160px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    &__item-content {
+        padding: 20px 20px 15px;
+        border-radius: 4px;
+        background-color: #fff;
+    }
+    &__item-title {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 24px;
+        color: #000;
+    }
+    &__item-info {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 10px 0px;
+    }
+    &__author-link {
+        font-size: 15px;
+        font-weight: 400;
+        color: #000;
+    }
+    &__item-descr {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 5px;
+        .item-cart {
+            color: $blue;
+            font-size: 15px;
+            font-weight: 400;
+        }
+    }
+    &__item-category {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin-right: 20px;
+        font-size: 15px;
+        font-weight: 400;
+        color: $purple;
+    }
+}
+//end page-grid
